--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
     "@headlessui/react": "^1.7.18",
+    "aws4": "^1.13.2",
     "axios": "^1.6.8",
     "crisp-sdk-web": "^1.0.22",
     "eslint": "8.47.0",
@@ -32,7 +33,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
     "resend": "^4.0.1",
-    "stripe": "^13.11.0"
+    "stripe": "^13.11.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
